tests/Row/expected
"
| Last Name    | Department ID |
| ------------ | ------------- |
| "Rafferty"   | Just 31       |
| "Jones"      | Just 32       |
| "Heisenberg" | Just 33       |"
"
| Last Name  | Department ID |
| ---------- | ------------- |
| "Robinson" | Just 34       |
| "Smith"    | Just 34       |
| "Williams" | Nothing       |"

"
| Last Name    | Department ID |
| ------------ | ------------- |
| "Rafferty"   | Just 31       |
| "Jones"      | Just 32       |
| "Heisenberg" | Just 33       |
| "Robinson"   | Just 34       |
| "Smith"      | Just 34       |
| "Williams"   | Nothing       |"

"
| Last Name  | Department ID |
| ---------- | ------------- |
| "Robinson" | Just 34       |
| "Smith"    | Just 34       |
| "Williams" | Nothing       |"
"
| Last Name  | Department ID |
| ---------- | ------------- |
| "Robinson" | Just 34       |
| "Smith"    | Just 34       |
| "Williams" | Nothing       |"
"
| Last Name  | Department ID |
| ---------- | ------------- |
| "Robinson" | Just 34       |"

"
| Last Name    | Department ID |
| ------------ | ------------- |
| "Rafferty"   | Just 31       |
| "Jones"      | Just 32       |
| "Heisenberg" | Just 33       |
| "Robinson"   | Just 34       |
| "Smith"      | Just 34       |
| "Williams"   | Nothing       |"
"
| Last Name    | Department ID |
| ------------ | ------------- |
| "Rafferty"   | Just 31       |
| "Jones"      | Just 32       |
| "Heisenberg" | Just 33       |
| "Robinson"   | Just 34       |
| "Smith"      | Just 34       |
| "Williams"   | Nothing       |"
"
| Last Name    | Department ID |
| ------------ | ------------- |
| "Rafferty"   | Just 31       |
| "Jones"      | Just 32       |
| "Heisenberg" | Just 33       |
| "Robinson"   | Just 34       |"

[<[<"Rafferty", Just 31], [<"Jones", Just 32], [<"Heisenberg", Just 33], [<"Robinson", Just 34], [<"Smith", Just 34], [<"Williams", Nothing]]

False
True
False
True

[<"Rafferty (Dep. 31)", "Jones (Dep. 32)", "Heisenberg (Dep. 33)", "Robinson (Dep. 34)", "Smith (Dep. 34)", "Williams"]
"Rafferty (Dep. 31), Jones (Dep. 32), Heisenberg (Dep. 33), Robinson (Dep. 34), Smith (Dep. 34), Williams"

"
| Last Name    | Department ID |
| ------------ | ------------- |
| "Rafferty"   | Just 31       |
| "Jones"      | Just 32       |
| "Heisenberg" | Just 33       |
| "Robinson"   | Just 34       |
| "Williams"   | Nothing       |"
"
| Last Name    | Department ID |
| ------------ | ------------- |
| "Rafferty"   | Just 31       |
| "Jones"      | Just 32       |
| "Heisenberg" | Just 33       |
| "Robinson"   | Just 34       |
| "Smith"      | Just 34       |
| "Williams"   | Nothing       |"

"
| Last Name    | Department ID |
| ------------ | ------------- |
| "Heisenberg" | Just 33       |
| "Jones"      | Just 32       |
| "Rafferty"   | Just 31       |
| "Robinson"   | Just 34       |
| "Smith"      | Just 34       |
| "Williams"   | Nothing       |"
"
| Last Name    | Department ID |
| ------------ | ------------- |
| "Williams"   | Nothing       |
| "Rafferty"   | Just 31       |
| "Jones"      | Just 32       |
| "Heisenberg" | Just 33       |
| "Robinson"   | Just 34       |
| "Smith"      | Just 34       |"

"
| Last Name    | Department ID |
| ------------ | ------------- |
| "Rafferty"   | Just 31       |
| "Jones"      | Just 32       |
| "Heisenberg" | Just 33       |
| "Robinson"   | Just 34       |
| "Smith"      | Just 34       |"

[<"Rafferty", Just 31]
[<"Jones", Just 32]
[<"Heisenberg", Just 33]
Error: Can't find an implementation for So (with block in integerLessThanNat 3 False 3).

(Interactive):1:19--1:20
 1 |     row employees 3
                       ^


"
| Last Name    | Department ID |
| ------------ | ------------- |
| "Rafferty"   | Just 31       |
| "Jones"      | Just 32       |
| "Heisenberg" | Just 33       |"
"
| Last Name  | Department ID |
| ---------- | ------------- |
| "Rafferty" | Just 31       |
| "Jones"    | Just 32       |"
"
| Last Name  | Department ID |
| ---------- | ------------- |
| "Rafferty" | Just 31       |"
"
| Last Name | Department ID |
| --------- | ------------- |"
Error: Can't find an implementation for So (with block in integerLessThanNat 4 False 4).

(Interactive):1:31--1:32
 1 |     show $ dropRows employees 4
                                   ^


"
| Last Name | Department ID |
| --------- | ------------- |"
"
| Last Name  | Department ID |
| ---------- | ------------- |
| "Rafferty" | Just 31       |"
"
| Last Name  | Department ID |
| ---------- | ------------- |
| "Rafferty" | Just 31       |
| "Jones"    | Just 32       |"
"
| Last Name    | Department ID |
| ------------ | ------------- |
| "Rafferty"   | Just 31       |
| "Jones"      | Just 32       |
| "Heisenberg" | Just 33       |"
Error: Can't find an implementation for So (with block in integerLessThanNat 4 False 4).

(Interactive):1:27--1:28
 1 |     show $ init employees 4
                               ^


[("cool", 4.0), ("warm", 3.0)]

[(10, ["Bob", "Eve"]), (15, ["Alice"])]
[(75, ["Eve"]), (85, ["Bob", "Alice"])]
[("blue", [<[<"Bob", 12]]), ("green", [<[<"Alice", 17]]), ("red", [<[<"Eve", 13]])]
[(12, [<[<"Bob", 8, 9, 77, 7, 9, 87]]), (13, [<[<"Eve", 7, 9, 84, 8, 8, 77]]), (17, [<[<"Alice", 6, 8, 88, 8, 7, 85]])]
[("blue", [<[<"Bob", 12, "blue"]]), ("green", [<[<"Alice", 17, "green"]]), ("red", [<[<"Eve", 13, "red"]])]
[(12, [<[<"Bob", 12, 8, 9, 77, 7, 9, 87]]), (13, [<[<"Eve", 13, 7, 9, 84, 8, 8, 77]]), (17, [<[<"Alice", 17, 6, 8, 88, 8, 7, 85]])]

[(10, 2), (15, 1)]
[(75, 1), (85, 2)]
[("blue", 1), ("green", 1), ("red", 1)]
[(12, 1), (13, 1), (17, 1)]

